# grounded

./: README.md  pyproject.toml
.github/workflows/: ci.yml  verify.yml
examples/: README.md  ai-verification-report.md  demo-report.md
grounded/: __init__.py  cli.py  fetch.py  ground.py  parse.py
tests/: test_grounded.py
